mealie/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      securityContext:
        runAsUser: 3001
        runAsGroup: 3001
        fsGroup: 3001
        fsGroupChangePolicy: OnRootMismatch
      volumes:
        - name: mealie-vol
          persistentVolumeClaim:
            claimName: mealie
      containers:
      - name: mealie
        image: ghcr.io/mealie-recipes/mealie:v3.28.0
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
        resources:
          requests:
            cpu: 20m
            memory: 100M
          limits:
            cpu: 200m
            memory: 500M
        volumeMounts:
          - mountPath: "/app/data/"
            name: mealie-vol
        ports:
          - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9000
    name: http
  selector:
    app: mealie
---
