mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: mealie
spec:
  defaultBackend:
    service:
      name: mealie
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - mealie
